welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value Nord is not a member of object plm.universe.Direction
while (!estFaceMur() && getDirection()==Direction.Nord)
                                                  ^